# metal_mayhem

./: .gitignore  Cargo.toml  README.md  docker-compose.yml
core/: Cargo.toml  Dockerfile  props.ini
core/src/: collisions.rs  config.rs  connections.rs  game.rs  input.rs  main.rs  output.rs  player.rs  render.rs  stage.rs  world.rs
example/: README.md  client_message.json  client_message_example_20230820.json
go_test_server/: README.md  data.json  data_old.json  go.mod  go.sum  main.go
joypad/: .dockerignore  .env.local  .gitignore  Dockerfile  README.md  index.html  package.json  pnpm-lock.yaml  serve.json  vite.config.ts
joypad/src/: App.tsx  index.css  index.tsx
joypad/src/models/: game.ts  user.ts
joypad/src/pages/: Home.tsx
joypad/src/pages/battle/: Battle.tsx
joypad/src/shared/: constants.ts
joypad/src/shared/components/: AvatarImageRounded.tsx  Instructions.tsx  PlayerImageRounded.tsx
joypad/src/shared/context/: auth.context.tsx  game.context.tsx
joypad/src/shared/guards/: ScreenOrientationGuard.tsx
nginx/: Dockerfile  nginx.conf
player/: index.html
server/: .eslintrc.cjs  .gitignore  Dockerfile  index.ts  package-lock.json  package.json  tsconfig.json
server/src/: battle.room.ts  fsm.ts  global.ts  ipc_sockets.ts  logging.ts  message-handling.ts  packet-size-ticker.ts  relay.room.ts  sockets.ts  state.ts
server/static/viewer/: Dockerfile  index.html  main.js
src/: collisions.rs  connections.rs  game.rs  input.rs  main.rs  main_noph.rs  physics.rs  player.rs  render.rs  world.rs
web_player/: index.html
(+7 files in other folders)
