[package]
name = "mm_engine"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.8.4"
termion = "1.5.6"
rapier2d = { version = "*", features = ["enhanced-determinism", "serde-serialize"] }
serde = { version = "1.0.130", features = ["derive"] }
serde_json = "1.0.68"
tokio = { version = "1.12.0", features = ["full"] }
tokio-websockets = { version =  "0.3.3", features = ["default"] }
tokio-util = "0.7.8"
bytes = "1.4.0"
futures-util = "0.3.28" 
